tests/test_data/invalid_semantics/type_checking/conflict_function_decl_types.c
int foo();

int foo(int x)
{
  return x;
}

int main(void)
{
  return foo(42);
}
